# tud-processor-design-project

./: .gitignore  .gitmodules  BASELINE.md  CLAUDE.md  PDP-GRADING-SCHEME.md  PDP_group24.pptx  PROFILING.md  PROGRESS.md  README.md  REPORT_INTERMEDIATE.md  REPORT_INTERMEDIATE_FINAL.md  SIDECHANNEL.md  SPEECH_NOTES.md  credentials.example.txt  test.txt
CW Wrapper/: AHB_CACHE.v  bram_memory.v  constraints.xdc  cw305_top.v
CW Wrapper/CW_305/: AHB_NOCACHE.v  cw305_tb.sv  mem_wrapper.v
CW Wrapper/include_pkg/: apu_core_package.sv  apu_macros.sv  cv32e40s_pkg.sv  riscv_defines.sv  riscv_tracer_defines.sv
CW Wrapper/temp/: mem_wrapper_tapeout.v
artifacts/zkne_dom/: riscv.hwh  riscv_wrapper.bit  riscv_wrapper.tcl
artifacts/zkne_tower/: riscv.hwh  riscv_wrapper.bit  riscv_wrapper.tcl
drafts/: 2026-05-08-hruday-quiz-draft.txt  2026-05-08-rishi-gantt.gantt
exam-presentation/: ARCHITECTURE.md  README.md  SPEECH_NOTES.md
pdp-project-24/: .gitignore  README.md  SESSION_NOTES.md
pdp-project-24/compiler/aes-unroll-pass/: AESUnroll.cpp  CMakeLists.txt
profiling-instrumentation/: README.md  main.c
pynq/: RESULTS.md  run_aes_on_pynq.py  run_zkne_test_on_pynq.py
references/: README.md
sca_results/: SCA_METHODOLOGY.md  SCA_README.md  VERIFICATION.md
scripts/: _lib.sh  connect-server.sh  fetch-from-server.sh  launch-server-session.sh  launch-vivado.sh  launch-x2go.sh  make_optim_overview_fig.py  mount-server.sh  push-sca.sh  run-on-pynq.sh  run-zkne-test-on-pynq.sh  setup-server-auth.sh  umount-server.sh
sidechannel/: README.md  RESULTS.md
(+99 files in other folders)
